--- a/Main Code/Laser_interaction_in_fields.cbp
+++ b/Main Code/Laser_interaction_in_fields.cbp
@@ -2,7 +2,7 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Laser cooling code" />
+		<Option title="Laser_interaction_in_fields" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
@@ -109,9 +109,6 @@
 		<Unit filename="sortie_donnees.cpp" />
 		<Unit filename="sortie_donnees.h" />
 		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
 			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
