2020-05-10 Correction of Wrong Matrix

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Main Code/Data/sortie_rate_100Ps_LaserOFF_B1e5_mJ1.dat
 Main Code/Data/sortie_rate_300Ps_Laser100kW_B250.dat
 Main Code/Data/sortie_rate_300Ps_Laser10kW_B0.dat
 Main Code/Data/sortie_rate_300Ps_Laser20kW_B250.dat
+Main Code/Data/sortie_rate_100Ps_LaserOFF_B1e5.dat
+Main Code/Data/sortie_rate_100Ps_LaserOFF_B1e5.dat
+Main Code/Data/sortie_rate_100Ps_LaserOFF_B1e8.dat
+Main Code/Data/sortie_rate_100Ps_LaserOFF_B1e8.dat
