--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Main Code/Data/sortie_rate_100Ps_LaserOFF_B0.dat
 Main Code/Data/sortie_rate_100Ps_LaserOFF_B1e5.dat
 Main Code/Data/sortie_rate_100Ps_LaserOFF_B1e8.dat
 Main Code/Data/sortie_rate_300Ps_LaserOFF_B0.dat
+Main Code/Data/donnee_Mol_N2000_1000ns_LaserOFF_Bxz250_RNG2_0K.dat
