--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Main Code/Data/3P1/Scanning runs/donnee_Mol_N4000_24ns_P20_POLsp_BW50_DET-10.5+1
 Main Code/Data/Preparatory Checks/donnee_Mol_N2000_1000ns_LaserOFF_Bxz250_RNG2_0K.dat
 Main Code/Data/3P1/Old Scanning Runs, Wrong/donnee_Mol_N4000_24ns_P20_POLsp_BW50_DET-10.5+10.5_Bxz250_RNG2.dat
 Main Code/Data/3P1/Old Scanning Runs, Wrong/donnee_Mol_N4000_24ns_P20_POLsp_BW50_DET-10+10_Bxz250_RNG2.dat
+Main Code/Data/donnee_Mol_N4000_24ns_P20_POLsp_BW50_DET-10,+4_Bxz250_RNG3.dat
